[tool.poetry]
name = "aioratelimits"
version = "0.2.4"
description = ""
authors = ["Dmitry Kostromin <kupec-k@ya.ru>"]
keywords = ["rates", "ratelimit", "ratelimiter", "leaky", "bucket"]
readme = "README.md"
repository = "https://github.com/kupec/aioratelimits"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
